--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,7 +115,7 @@ byte-slice-cast = { version = "1.2.0", default-features = false }
 
 # This table is used to specify the member crates of this workspace.
 [workspace]
-members = ["./embassy-lab-utils"]
+members = ["./embassy-lab-utils", "buzzer", "rgb_led"]
 # The resolver is a component responsible for determining the versions of
 # dependencies that should be used to build a Rust project.
 resolver = "3"
