--- a/rc522/Cargo.toml
+++ b/rc522/Cargo.toml
@@ -9,17 +9,17 @@ embassy-executor = { version = "0.7.0", git = "https://github.com/embassy-rs/emb
 
 embassy-time = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt", "defmt-timestamp-uptime"] }
 embassy-embedded-hal = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt"] }
-embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
+embedded-hal = "1.0.0"
 # RP2350 HAL
 embassy-rp = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
 embassy-sync = { version = "0.6.2", git = "https://github.com/embassy-rs/embassy", rev = "2e7a2b6", features = ["defmt"] }
-# SPI Display support
-display-interface-spi = "0.5.0"
-display-interface = "0.5.0"
 defmt = "0.3"
 defmt-rtt = "0.4"
 cortex-m-rt = "0.7.0"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 embedded-hal-async = "1.0.0"
-ssd1306 = "0.7.0"
+embedded-hal-bus = "0.2.0"
 mfrc522 = "0.8"
+usbd-serial = "0.2.2"
+usb-device = "0.3.2"
+heapless = "0.8.0"
